Get body shadow working and fix z-index properties

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -2,9 +2,24 @@ footer {
   background-color: $dark-gray;
   background-image: linear-gradient(to top, $dark-gray, $light-gray);
   color: $lightest;
-  padding-top: 1.875rem;
+  padding-top: 3.75rem;
   padding-bottom: 1px; // janky margin-negating hack
   -webkit-font-smoothing: antialiased;
+  position: relative;
+  z-index: 1;
+
+  &:before {
+    content: "";
+    display: inline-block;
+    height: 1.875rem;
+    position: absolute;
+    z-index: 1;
+    left: 0; right: 0;
+    top: 0;
+    @include top-left($lightest-gray);
+    -webkit-filter: drop-shadow( rgba($darkest, 0.5) 0 10px 20px );
+            filter: drop-shadow( rgba($darkest, 0.5) 0 10px 20px );
+  }
 
   a {
     border-bottom-color: rgba($lightest, 0.2) !important;
@@ -67,7 +82,10 @@ footer {
 
 @media (min-width: 700px) {
   footer {
-    padding-top: 4.375rem;
+    padding-top: 7.5rem;
+    &:before {
+      height: 3.75rem;
+    }
   }
 
   .split-container {
