--- a/src/styles/defaults/_base.scss
+++ b/src/styles/defaults/_base.scss
@@ -1,4 +1,9 @@
-* { box-sizing: border-box; }
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 
 body {
   font-family: Merriweather, serif;
@@ -10,35 +15,13 @@ body {
 
 main {
   background-color: $lightest-gray;
-  padding: 30px 0;
+  padding: 0.9375rem 0 1.875rem 0;
   position: relative;
-  z-index: 1;
-  box-shadow:
-    rgba($darkest, 0.5) 0 10px 20px,
-    rgba($darkest, 0.5) 0 -10px 20px;
-
-  &:before,
-  &:after {
-    content: "";
-    display: block;
-    height: 30px;
-    position: absolute;
-    left: 0; right: 0;
-  }
-
-  &:before {
-    top: -30px;
-    background-color: rgba(red, 0.5);
-  }
-
-  &:after {
-    bottom: -30px;
-    background-color: rgba(red, 0.5);
-  }
+  z-index: 2;
 }
 
 section {
-  margin-bottom: 30px;
+  margin-bottom: 1.875rem;
 
   &:last-child {
     margin-bottom: 0;
@@ -96,6 +79,11 @@ li {
   font-size: 1.25rem;      // 20px
   line-height: 1.5;        // 30px
   margin-bottom: 1.875rem; // 30px
+
+  &:last-child { // if there's no image after the subtitle push bottom of header down
+    margin-bottom: 0;
+    padding-bottom: 3.75rem;
+  }
 }
 
 .page-heading--solo-paragraph {
@@ -152,24 +140,11 @@ img {
 @media (min-width: 700px) {
 
   main {
-    padding: 60px 0;
-
-    &:before,
-    &:after {
-      height: 70px;
-    }
-
-    &:before {
-      top: -70px;
-    }
-
-    &:after {
-      bottom: -70px;
-    }
+    padding: 1.875rem 0 3.75rem 0;
   }
 
   section {
-    margin-bottom: 60px;
+    margin-bottom: 3.75rem;
   }
 
   p,
@@ -195,6 +170,11 @@ img {
     font-size: 1.875rem;    // 30px
     line-height: 1.6;       // 48px
     margin-bottom: 3.75rem; // 60px
+
+    &:last-child { // if there's no image after the subtitle push bottom of header down
+      margin-bottom: 0;
+      padding-bottom: 7.5rem;
+    }
   }
 
   .page-heading--solo-paragraph {
